<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BookingCar</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_homepage">HomepageActivity</string>
    <string name="title_activity_appointment_">Appointment_Activity</string>
    <string name="title_activity_information_">Information_Activity</string>
    <string name="title_activity_setprogress_">Setprogress_Activity</string>
    <string name="title_activity_sregistration_">Sregistration_Activity</string>
    <string name="title_activity_viewprogress_">Viewprogress_Activity</string>
    <string name="title_activity_login_">Login_Activity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="phone">请输入手机号</string>
    <string name="password">请输入密码</string>
    <string name="title_activity_record_">Record_Activity</string>
    <string name="Make">确定预约</string>
	<string name="Sname">请输入学生姓名:</string>
	<string name="name">姓名:</string>
	<string name="start_time">开始时间:</string>
	<string name="end_time">结束时间:</string>
	<!-- 时间选择器 -->
	<string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
	
</resources>