<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/Tname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:text="@string/Sname"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/Ename"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:ems="10" />

        <TextView
            android:id="@+id/Tphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/phone"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/Ephone"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:ems="10" />

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:text="@string/start_time" />

        <TextView
            android:id="@+id/sTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start_time" />

        <Button
            android:id="@+id/end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:text="@string/end_time" />

        <TextView
            android:id="@+id/eTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/end_time" />
    </LinearLayout>

    <Button
        android:id="@+id/sumbit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@drawable/record_click"
        android:text="@string/Make"
        android:textColor="#ffffff" />

</RelativeLayout>